--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -814,18 +814,18 @@
                             <size key="itemSize" width="230" height="400"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCollectionCell" id="nKy-tb-s5e" customClass="IACollectionsExploreViewCell" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                                <rect key="frame" x="20" y="45" width="150" height="250"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="250"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="htG-CN-Jj9">
-                                            <rect key="frame" x="-25" y="18" width="200" height="150"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="htG-CN-Jj9">
+                                            <rect key="frame" x="0.0" y="8" width="150" height="150"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="150" id="2CI-ov-wlZ">
                                                     <variation key="widthClass=compact" constant="100"/>
@@ -835,10 +835,13 @@
                                                     <variation key="widthClass=compact" constant="100"/>
                                                     <variation key="heightClass=regular-widthClass=regular" constant="140"/>
                                                 </constraint>
+                                                <constraint firstAttribute="width" secondItem="htG-CN-Jj9" secondAttribute="height" multiplier="1:1" id="lMd-5Z-2B5"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
+                                                    <exclude reference="2CI-ov-wlZ"/>
                                                     <exclude reference="RNI-fE-381"/>
+                                                    <exclude reference="kmS-Ff-mA5"/>
                                                 </mask>
                                             </variation>
                                             <variation key="heightClass=regular-widthClass=regular">
@@ -850,7 +853,7 @@
                                             </variation>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRK-5I-UzV">
-                                            <rect key="frame" x="8" y="185" width="134" height="120"/>
+                                            <rect key="frame" x="0.0" y="166" width="150" height="76"/>
                                             <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -860,22 +863,31 @@
                                 </view>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="HRK-5I-UzV" firstAttribute="leading" secondItem="htG-CN-Jj9" secondAttribute="leading" id="8ze-XN-f4K"/>
                                     <constraint firstItem="HRK-5I-UzV" firstAttribute="leading" secondItem="nKy-tb-s5e" secondAttribute="leadingMargin" id="Cw3-XO-pWQ"/>
+                                    <constraint firstItem="htG-CN-Jj9" firstAttribute="leading" secondItem="nKy-tb-s5e" secondAttribute="leading" id="PAY-Kf-yfl"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="HRK-5I-UzV" secondAttribute="trailing" id="UNz-pY-TXu"/>
-                                    <constraint firstItem="HRK-5I-UzV" firstAttribute="top" secondItem="htG-CN-Jj9" secondAttribute="bottom" constant="17" id="VeP-YF-OEJ"/>
+                                    <constraint firstItem="HRK-5I-UzV" firstAttribute="top" secondItem="htG-CN-Jj9" secondAttribute="bottom" constant="8" symbolic="YES" id="VeP-YF-OEJ"/>
                                     <constraint firstItem="htG-CN-Jj9" firstAttribute="centerX" secondItem="nKy-tb-s5e" secondAttribute="centerX" id="WD2-gs-AX7"/>
                                     <constraint firstItem="htG-CN-Jj9" firstAttribute="leading" secondItem="nKy-tb-s5e" secondAttribute="leading" constant="5" id="ao1-tj-uA5">
                                         <variation key="heightClass=regular-widthClass=regular" constant="20"/>
                                     </constraint>
-                                    <constraint firstItem="htG-CN-Jj9" firstAttribute="top" secondItem="nKy-tb-s5e" secondAttribute="topMargin" constant="10" id="c2Z-hn-44l"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="HRK-5I-UzV" secondAttribute="bottom" constant="-13" id="lND-Ly-TOA"/>
+                                    <constraint firstItem="htG-CN-Jj9" firstAttribute="top" secondItem="nKy-tb-s5e" secondAttribute="topMargin" id="c2Z-hn-44l"/>
+                                    <constraint firstItem="HRK-5I-UzV" firstAttribute="trailing" secondItem="htG-CN-Jj9" secondAttribute="trailing" id="eUV-ZR-Kxc"/>
+                                    <constraint firstItem="htG-CN-Jj9" firstAttribute="width" secondItem="nKy-tb-s5e" secondAttribute="width" id="ept-Gd-8wK"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="HRK-5I-UzV" secondAttribute="bottom" id="lND-Ly-TOA"/>
+                                    <constraint firstAttribute="trailing" secondItem="htG-CN-Jj9" secondAttribute="trailing" id="rxo-gZ-OgI"/>
                                     <constraint firstItem="htG-CN-Jj9" firstAttribute="leading" secondItem="nKy-tb-s5e" secondAttribute="leadingMargin" id="sco-Pd-YaM"/>
                                 </constraints>
-                                <size key="customSize" width="150" height="300"/>
+                                <size key="customSize" width="150" height="250"/>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="WD2-gs-AX7"/>
                                         <exclude reference="ao1-tj-uA5"/>
+                                        <exclude reference="ept-Gd-8wK"/>
                                         <exclude reference="sco-Pd-YaM"/>
+                                        <exclude reference="Cw3-XO-pWQ"/>
+                                        <exclude reference="UNz-pY-TXu"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=regular">
@@ -892,7 +904,7 @@
                                 </connections>
                             </collectionViewCell>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookSearchCell" id="YhU-r8-D5Z" customClass="IAItemListCellView" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="225" y="0.0" width="150" height="300"/>
+                                <rect key="frame" x="180" y="20" width="150" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
@@ -1362,9 +1374,9 @@
                                 <size key="customSize" width="150" height="300"/>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="NFB-2c-C2d"/>
                                         <exclude reference="5M9-Xi-fw7"/>
                                         <exclude reference="Qyw-G0-99g"/>
-                                        <exclude reference="NFB-2c-C2d"/>
                                     </mask>
                                 </variation>
                                 <connections>
@@ -1425,6 +1437,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="tge-dc-5FS"/>
-        <segue reference="x14-IC-tKz"/>
+        <segue reference="g80-tq-n91"/>
     </inferredMetricsTieBreakers>
 </document>
